STAND-109 Replace the embedded mysql with mariadb4j